iptables.rules
# Generated by xtables-save v1.8.2 on Mon Feb 24 21:37:51 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i wwan0 -j DROP
-A FORWARD -i any -o wwan0 -j ACCEPT
-A FORWARD -i any -o wwan0 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Feb 24 21:37:51 2020
# Generated by xtables-save v1.8.2 on Mon Feb 24 21:37:51 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o wwan0 -j MASQUERADE
COMMIT
# Completed on Mon Feb 24 21:37:51 2020
